;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;                                                                        ;;
;;  This file is part of Frama-C.                                         ;;
;;                                                                        ;;
;;  Copyright (C) 2007-2024                                               ;;
;;    CEA (Commissariat à l'énergie atomique et aux énergies              ;;
;;         alternatives)                                                  ;;
;;                                                                        ;;
;;  you can redistribute it and/or modify it under the terms of the GNU   ;;
;;  Lesser General Public License as published by the Free Software       ;;
;;  Foundation, version 2.1.                                              ;;
;;                                                                        ;;
;;  It is distributed in the hope that it will be useful,                 ;;
;;  but WITHOUT ANY WARRANTY; without even the implied warranty of        ;;
;;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         ;;
;;  GNU Lesser General Public License for more details.                   ;;
;;                                                                        ;;
;;  See the GNU Lesser General Public License version 2.1                 ;;
;;  for more details (enclosed in the file licenses/LGPLv2.1).            ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(install
 (package frama-c)
 (section (site (frama-c share)))
 (files
; Auto-Complete
(autocomplete_frama-c as autocomplete_frama-c)
(_frama-c as _frama-c)
; Emacs
(emacs/frama-c-init.el as emacs/frama-c-init.el)
(emacs/frama-c-dev.el as emacs/frama-c-dev.el)
(emacs/frama-c-recommended.el as emacs/frama-c-recommended.el)
(emacs/acsl.el as emacs/acsl.el)
; Useful Makefiles
(Makefile.common as Makefile.common)
(Makefile.headers as Makefile.headers)
(Makefile.linting as Makefile.linting)
(Makefile.installation as Makefile.installation)
(Makefile.testing as Makefile.testing)
; GUI Images
(frama-c.ico as frama-c.ico)
(frama-c.png as frama-c.png)
(unmark.png as unmark.png)
(switch-on.png as switch-on.png)
(switch-off.png as switch-off.png)
; Default theme
(theme/default/never_tried.png as theme/default/never_tried.png)
(theme/default/unknown.png as theme/default/unknown.png)
(theme/default/surely_valid.png as theme/default/surely_valid.png)
(theme/default/surely_invalid.png as theme/default/surely_invalid.png)
(theme/default/considered_valid.png as theme/default/considered_valid.png)
(theme/default/valid_under_hyp.png as theme/default/valid_under_hyp.png)
(theme/default/invalid_under_hyp.png as theme/default/invalid_under_hyp.png)
(theme/default/invalid_but_dead.png as theme/default/invalid_but_dead.png)
(theme/default/unknown_but_dead.png as theme/default/unknown_but_dead.png)
(theme/default/valid_but_dead.png as theme/default/valid_but_dead.png)
(theme/default/inconsistent.png as theme/default/inconsistent.png)
(theme/default/fold.png as theme/default/fold.png)
(theme/default/unfold.png as theme/default/unfold.png)
; Colorblind theme
(theme/colorblind/never_tried.png as theme/colorblind/never_tried.png)
(theme/colorblind/unknown.png as theme/colorblind/unknown.png)
(theme/colorblind/surely_valid.png as theme/colorblind/surely_valid.png)
(theme/colorblind/surely_invalid.png as theme/colorblind/surely_invalid.png)
(theme/colorblind/considered_valid.png as theme/colorblind/considered_valid.png)
(theme/colorblind/valid_under_hyp.png as theme/colorblind/valid_under_hyp.png)
(theme/colorblind/invalid_under_hyp.png as theme/colorblind/invalid_under_hyp.png)
(theme/colorblind/invalid_but_dead.png as theme/colorblind/invalid_but_dead.png)
(theme/colorblind/unknown_but_dead.png as theme/colorblind/unknown_but_dead.png)
(theme/colorblind/valid_but_dead.png as theme/colorblind/valid_but_dead.png)
(theme/colorblind/inconsistent.png as theme/colorblind/inconsistent.png)
(theme/colorblind/fold.png as theme/colorblind/fold.png)
(theme/colorblind/unfold.png as theme/colorblind/unfold.png)
; Flat theme
(theme/flat/never_tried.png as theme/flat/never_tried.png)
(theme/flat/unknown.png as theme/flat/unknown.png)
(theme/flat/surely_valid.png as theme/flat/surely_valid.png)
(theme/flat/surely_invalid.png as theme/flat/surely_invalid.png)
(theme/flat/considered_valid.png as theme/flat/considered_valid.png)
(theme/flat/valid_under_hyp.png as theme/flat/valid_under_hyp.png)
(theme/flat/invalid_under_hyp.png as theme/flat/invalid_under_hyp.png)
(theme/flat/invalid_but_dead.png as theme/flat/invalid_but_dead.png)
(theme/flat/unknown_but_dead.png as theme/flat/unknown_but_dead.png)
(theme/flat/valid_but_dead.png as theme/flat/valid_but_dead.png)
(theme/flat/inconsistent.png as theme/flat/inconsistent.png)
(theme/flat/fold.png as theme/flat/fold.png)
(theme/flat/unfold.png as theme/flat/unfold.png)
; Libc
(libc/__fc_alloc_axiomatic.h as libc/__fc_alloc_axiomatic.h)
(libc/__fc_builtin.c as libc/__fc_builtin.c)
(libc/__fc_builtin.h as libc/__fc_builtin.h)
(libc/__fc_define_blkcnt_t.h as libc/__fc_define_blkcnt_t.h)
(libc/__fc_define_blksize_t.h as libc/__fc_define_blksize_t.h)
(libc/__fc_define_clockid_t.h as libc/__fc_define_clockid_t.h)
(libc/__fc_define_dev_t.h as libc/__fc_define_dev_t.h)
(libc/__fc_define_eof.h as libc/__fc_define_eof.h)
(libc/__fc_define_fd_set_t.h as libc/__fc_define_fd_set_t.h)
(libc/__fc_define_fds.h as libc/__fc_define_fds.h)
(libc/__fc_define_file.h as libc/__fc_define_file.h)
(libc/__fc_define_fpos_t.h as libc/__fc_define_fpos_t.h)
(libc/__fc_define_fs_cnt.h as libc/__fc_define_fs_cnt.h)
(libc/__fc_define_id_t.h as libc/__fc_define_id_t.h)
(libc/__fc_define_ino_t.h as libc/__fc_define_ino_t.h)
(libc/__fc_define_intptr_t.h as libc/__fc_define_intptr_t.h)
(libc/__fc_define_iovec.h as libc/__fc_define_iovec.h)
(libc/__fc_define_key_t.h as libc/__fc_define_key_t.h)
(libc/__fc_define_locale_t.h as libc/__fc_define_locale_t.h)
(libc/__fc_define_max_open_files.h as libc/__fc_define_max_open_files.h)
(libc/__fc_define_mode_t.h as libc/__fc_define_mode_t.h)
(libc/__fc_define_nlink_t.h as libc/__fc_define_nlink_t.h)
(libc/__fc_define_null.h as libc/__fc_define_null.h)
(libc/__fc_define_off_t.h as libc/__fc_define_off_t.h)
(libc/__fc_define_pid_t.h as libc/__fc_define_pid_t.h)
(libc/__fc_define_pthread_types.h as libc/__fc_define_pthread_types.h)
(libc/__fc_define_sa_family_t.h as libc/__fc_define_sa_family_t.h)
(libc/__fc_define_seek_macros.h as libc/__fc_define_seek_macros.h)
(libc/__fc_define_sigset_t.h as libc/__fc_define_sigset_t.h)
(libc/__fc_define_size_t.h as libc/__fc_define_size_t.h)
(libc/__fc_define_sockaddr.h as libc/__fc_define_sockaddr.h)
(libc/__fc_define_ssize_t.h as libc/__fc_define_ssize_t.h)
(libc/__fc_define_stat.h as libc/__fc_define_stat.h)
(libc/__fc_define_suseconds_t.h as libc/__fc_define_suseconds_t.h)
(libc/__fc_define_time_t.h as libc/__fc_define_time_t.h)
(libc/__fc_define_timer_t.h as libc/__fc_define_timer_t.h)
(libc/__fc_define_timespec.h as libc/__fc_define_timespec.h)
(libc/__fc_define_timeval.h as libc/__fc_define_timeval.h)
(libc/__fc_define_uid_and_gid.h as libc/__fc_define_uid_and_gid.h)
(libc/__fc_define_useconds_t.h as libc/__fc_define_useconds_t.h)
(libc/__fc_define_wchar_t.h as libc/__fc_define_wchar_t.h)
(libc/__fc_define_wint_t.h as libc/__fc_define_wint_t.h)
(libc/__fc_gcc_builtins.h as libc/__fc_gcc_builtins.h)
(libc/__fc_inet.h as libc/__fc_inet.h)
(libc/__fc_integer.h as libc/__fc_integer.h)
(libc/__fc_libc.h as libc/__fc_libc.h)
(libc/__fc_runtime.c as libc/__fc_runtime.c)
(libc/__fc_select.h as libc/__fc_select.h)
(libc/__fc_string_axiomatic.h as libc/__fc_string_axiomatic.h)
(libc/aio.h as libc/aio.h)
(libc/alloca.h as libc/alloca.h)
(libc/argz.c as libc/argz.c)
(libc/argz.h as libc/argz.h)
(libc/arpa/inet.h as libc/arpa/inet.h)
(libc/assert.c as libc/assert.c)
(libc/assert.h as libc/assert.h)
(libc/byteswap.h as libc/byteswap.h)
(libc/complex.h as libc/complex.h)
(libc/cpio.h as libc/cpio.h)
(libc/ctype.c as libc/ctype.c)
(libc/ctype.h as libc/ctype.h)
(libc/dirent.h as libc/dirent.h)
(libc/dlfcn.h as libc/dlfcn.h)
(libc/endian.h as libc/endian.h)
(libc/err.h as libc/err.h)
(libc/errno.c as libc/errno.c)
(libc/errno.h as libc/errno.h)
(libc/fcntl.h as libc/fcntl.h)
(libc/features.h as libc/features.h)
(libc/fenv.c as libc/fenv.c)
(libc/fenv.h as libc/fenv.h)
(libc/float.h as libc/float.h)
(libc/fmtmsg.h as libc/fmtmsg.h)
(libc/fnmatch.h as libc/fnmatch.h)
(libc/ftw.h as libc/ftw.h)
(libc/getopt.h as libc/getopt.h)
(libc/glob.c as libc/glob.c)
(libc/glob.h as libc/glob.h)
(libc/grp.h as libc/grp.h)
(libc/iconv.h as libc/iconv.h)
(libc/ifaddrs.h as libc/ifaddrs.h)
(libc/inttypes.c as libc/inttypes.c)
(libc/inttypes.h as libc/inttypes.h)
(libc/iso646.h as libc/iso646.h)
(libc/langinfo.h as libc/langinfo.h)
(libc/libgen.h as libc/libgen.h)
(libc/limits.h as libc/limits.h)
(libc/locale.c as libc/locale.c)
(libc/locale.h as libc/locale.h)
(libc/malloc.h as libc/malloc.h)
(libc/math.c as libc/math.c)
(libc/math.h as libc/math.h)
(libc/memory.h as libc/memory.h)
(libc/monetary.h as libc/monetary.h)
(libc/mqueue.h as libc/mqueue.h)
(libc/ndbm.h as libc/ndbm.h)
(libc/net/if.h as libc/net/if.h)
(libc/netdb.c as libc/netdb.c)
(libc/netdb.h as libc/netdb.h)
(libc/netinet/in.c as libc/netinet/in.c)
(libc/netinet/in.h as libc/netinet/in.h)
(libc/netinet/ip.h as libc/netinet/ip.h)
(libc/netinet/tcp.h as libc/netinet/tcp.h)
(libc/nl_types.h as libc/nl_types.h)
(libc/poll.h as libc/poll.h)
(libc/pthread.h as libc/pthread.h)
(libc/pwd.c as libc/pwd.c)
(libc/pwd.h as libc/pwd.h)
(libc/regex.h as libc/regex.h)
(libc/resolv.h as libc/resolv.h)
(libc/sched.h as libc/sched.h)
(libc/search.h as libc/search.h)
(libc/semaphore.h as libc/semaphore.h)
(libc/setjmp.h as libc/setjmp.h)
(libc/signal.c as libc/signal.c)
(libc/signal.h as libc/signal.h)
(libc/spawn.h as libc/spawn.h)
(libc/stdalign.h as libc/stdalign.h)
(libc/stdarg.h as libc/stdarg.h)
(libc/stdatomic.c as libc/stdatomic.c)
(libc/stdatomic.h as libc/stdatomic.h)
(libc/stdbool.h as libc/stdbool.h)
(libc/stddef.h as libc/stddef.h)
(libc/stdint.h as libc/stdint.h)
(libc/stdio.c as libc/stdio.c)
(libc/stdio.h as libc/stdio.h)
(libc/stdlib.c as libc/stdlib.c)
(libc/stdlib.h as libc/stdlib.h)
(libc/stdnoreturn.h as libc/stdnoreturn.h)
(libc/string.c as libc/string.c)
(libc/string.h as libc/string.h)
(libc/strings.h as libc/strings.h)
(libc/stropts.h as libc/stropts.h)
(libc/sys/file.h as libc/sys/file.h)
(libc/sys/ioctl.h as libc/sys/ioctl.h)
(libc/sys/ipc.h as libc/sys/ipc.h)
(libc/sys/mman.h as libc/sys/mman.h)
(libc/sys/msg.h as libc/sys/msg.h)
(libc/sys/param.h as libc/sys/param.h)
(libc/sys/random.h as libc/sys/random.h)
(libc/sys/resource.h as libc/sys/resource.h)
(libc/sys/select.h as libc/sys/select.h)
(libc/sys/sem.h as libc/sys/sem.h)
(libc/sys/sendfile.h as libc/sys/sendfile.h)
(libc/sys/shm.h as libc/sys/shm.h)
(libc/sys/signal.h as libc/sys/signal.h)
(libc/sys/socket.c as libc/sys/socket.c)
(libc/sys/socket.h as libc/sys/socket.h)
(libc/sys/stat.h as libc/sys/stat.h)
(libc/sys/statvfs.h as libc/sys/statvfs.h)
(libc/sys/time.h as libc/sys/time.h)
(libc/sys/times.h as libc/sys/times.h)
(libc/sys/timex.h as libc/sys/timex.h)
(libc/sys/types.h as libc/sys/types.h)
(libc/sys/uio.h as libc/sys/uio.h)
(libc/sys/un.h as libc/sys/un.h)
(libc/sys/utsname.h as libc/sys/utsname.h)
(libc/sys/vfs.h as libc/sys/vfs.h)
(libc/sys/wait.h as libc/sys/wait.h)
(libc/syslog.h as libc/syslog.h)
(libc/tar.h as libc/tar.h)
(libc/termios.h as libc/termios.h)
(libc/tgmath.h as libc/tgmath.h)
(libc/time.c as libc/time.c)
(libc/time.h as libc/time.h)
(libc/trace.h as libc/trace.h)
(libc/ulimit.h as libc/ulimit.h)
(libc/unistd.c as libc/unistd.c)
(libc/unistd.h as libc/unistd.h)
(libc/utime.h as libc/utime.h)
(libc/utmp.h as libc/utmp.h)
(libc/utmpx.h as libc/utmpx.h)
(libc/wait.h as libc/wait.h)
(libc/wchar.c as libc/wchar.c)
(libc/wchar.h as libc/wchar.h)
(libc/wctype.h as libc/wctype.h)
(libc/wordexp.h as libc/wordexp.h)
; Compliance
(compliance/c11_functions.json as compliance/c11_functions.json)
(compliance/c11_headers.json as compliance/c11_headers.json)
(compliance/compiler_builtins.json as compliance/compiler_builtins.json)
(compliance/gcc_builtins.json as compliance/gcc_builtins.json)
(compliance/glibc_functions.json as compliance/glibc_functions.json)
(compliance/nonstandard_identifiers.json as compliance/nonstandard_identifiers.json)
(compliance/posix_identifiers.json as compliance/posix_identifiers.json)
))

; Analysis scripts (executable files)
(install
 (package frama-c)
 (section libexec)
 (files
(analysis-scripts/benchmark_database.py as lib/analysis-scripts/benchmark_database.py)
(analysis-scripts/bench-sqlite.sh as lib/analysis-scripts/bench-sqlite.sh)
(analysis-scripts/build_callgraph.py as lib/analysis-scripts/build_callgraph.py)
(analysis-scripts/build.py as lib/analysis-scripts/build.py)
(analysis-scripts/clone.sh as lib/analysis-scripts/clone.sh)
(analysis-scripts/cmd-dep.sh as lib/analysis-scripts/cmd-dep.sh)
(analysis-scripts/concat-csv.sh as lib/analysis-scripts/concat-csv.sh)
(analysis-scripts/creduce.sh as lib/analysis-scripts/creduce.sh)
(analysis-scripts/detect_recursion.py as lib/analysis-scripts/detect_recursion.py)
(analysis-scripts/estimate_difficulty.py as lib/analysis-scripts/estimate_difficulty.py)
(analysis-scripts/external_tool.py as lib/analysis-scripts/external_tool.py)
(analysis-scripts/fclog.py as lib/analysis-scripts/fclog.py)
(analysis-scripts/find_fun.py as lib/analysis-scripts/find_fun.py)
(analysis-scripts/flamegraph.pl as lib/analysis-scripts/flamegraph.pl)
(analysis-scripts/frama_c_results.py as lib/analysis-scripts/frama_c_results.py)
(analysis-scripts/function_finder.py as lib/analysis-scripts/function_finder.py)
(analysis-scripts/git_utils.py as lib/analysis-scripts/git_utils.py)
(analysis-scripts/heuristic_list_functions.py as lib/analysis-scripts/heuristic_list_functions.py)
(analysis-scripts/list_files.py as lib/analysis-scripts/list_files.py)
(analysis-scripts/make_wrapper.py as lib/analysis-scripts/make_wrapper.py)
(analysis-scripts/normalize_jcdb.py as lib/analysis-scripts/normalize_jcdb.py)
(analysis-scripts/parse-coverage.sh as lib/analysis-scripts/parse-coverage.sh)
(analysis-scripts/plot.sh as lib/analysis-scripts/plot.sh)
(analysis-scripts/print_callgraph.py as lib/analysis-scripts/print_callgraph.py)
(analysis-scripts/results_display.py as lib/analysis-scripts/results_display.py)
(analysis-scripts/script_for_creduce_fatal.sh as lib/analysis-scripts/script_for_creduce_fatal.sh)
(analysis-scripts/script_for_creduce_non_fatal.sh as lib/analysis-scripts/script_for_creduce_non_fatal.sh)
(analysis-scripts/source_filter.py as lib/analysis-scripts/source_filter.py)
(analysis-scripts/summary.py as lib/analysis-scripts/summary.py)
))

; Analysis scripts (non-executable files)
(install
 (package frama-c)
 (section lib)
 (files
(analysis-scripts/analysis.mk as lib/analysis-scripts/analysis.mk)
(analysis-scripts/epilogue.mk as lib/analysis-scripts/epilogue.mk)
(analysis-scripts/fc_stubs.c as lib/analysis-scripts/fc_stubs.c)
(analysis-scripts/list_functions.ml as lib/analysis-scripts/list_functions.ml)
(analysis-scripts/prologue.mk as lib/analysis-scripts/prologue.mk)
(analysis-scripts/readme-graph.graphml as lib/analysis-scripts/readme-graph.graphml)
(analysis-scripts/readme-graph.svg as lib/analysis-scripts/readme-graph.svg)
(analysis-scripts/README.md as lib/analysis-scripts/README.md)
(analysis-scripts/template.mk as lib/analysis-scripts/template.mk)

))

; machdeps
(install
 (package frama-c)
 (section share)
 (files
  (machdeps/machdep_avr_8.yaml as share/machdeps/machdep_avr_8.yaml)
  (machdeps/machdep_avr_16.yaml as share/machdeps/machdep_avr_16.yaml)
  (machdeps/machdep_x86_16.yaml as share/machdeps/machdep_x86_16.yaml)
  (machdeps/machdep_x86_32.yaml as share/machdeps/machdep_x86_32.yaml)
  (machdeps/machdep_x86_64.yaml as share/machdeps/machdep_x86_64.yaml)
  (machdeps/machdep_gcc_x86_16.yaml as share/machdeps/machdep_gcc_x86_16.yaml)
  (machdeps/machdep_gcc_x86_32.yaml as share/machdeps/machdep_gcc_x86_32.yaml)
  (machdeps/machdep_gcc_x86_64.yaml as share/machdeps/machdep_gcc_x86_64.yaml)
  (machdeps/machdep_msvc_x86_64.yaml as share/machdeps/machdep_msvc_x86_64.yaml)
  (machdeps/machdep_ppc_32.yaml as share/machdeps/machdep_ppc_32.yaml)
  (machdeps/machdep-schema.yaml as share/machdeps/machdep-schema.yaml)
 )
)

; machdep generation script
(install
 (package frama-c)
 (section libexec)
 (files
  (machdeps/make_machdep/make_machdep.py as lib/make_machdep/make_machdep.py))
)

; machdep generation auxiliary files
(install
 (package frama-c)
 (section lib)
 (files
  (machdeps/make_machdep/alignof_aligned.c as lib/make_machdep/alignof_aligned.c)
  (machdeps/make_machdep/alignof_double.c as lib/make_machdep/alignof_double.c)
  (machdeps/make_machdep/alignof_float.c as lib/make_machdep/alignof_float.c)
  (machdeps/make_machdep/alignof_fun.c as lib/make_machdep/alignof_fun.c)
  (machdeps/make_machdep/alignof_int.c as lib/make_machdep/alignof_int.c)
  (machdeps/make_machdep/alignof_long.c as lib/make_machdep/alignof_long.c)
  (machdeps/make_machdep/alignof_longdouble.c as lib/make_machdep/alignof_longdouble.c)
  (machdeps/make_machdep/alignof_longlong.c as lib/make_machdep/alignof_longlong.c)
  (machdeps/make_machdep/alignof_ptr.c as lib/make_machdep/alignof_ptr.c)
  (machdeps/make_machdep/alignof_short.c as lib/make_machdep/alignof_short.c)
  (machdeps/make_machdep/alignof_str.c as lib/make_machdep/alignof_str.c)
  (machdeps/make_machdep/char_is_unsigned.c as lib/make_machdep/char_is_unsigned.c)
  (machdeps/make_machdep/const_string_literals.c as lib/make_machdep/const_string_literals.c)
  (machdeps/make_machdep/errno.c as lib/make_machdep/errno.c)
  (machdeps/make_machdep/has__builtin_va_list.c as lib/make_machdep/has__builtin_va_list.c)
  (machdeps/make_machdep/int_fast16_t.c as lib/make_machdep/int_fast16_t.c)
  (machdeps/make_machdep/int_fast32_t.c as lib/make_machdep/int_fast32_t.c)
  (machdeps/make_machdep/int_fast64_t.c as lib/make_machdep/int_fast64_t.c)
  (machdeps/make_machdep/int_fast8_t.c as lib/make_machdep/int_fast8_t.c)
  (machdeps/make_machdep/intptr_t.c as lib/make_machdep/intptr_t.c)
  (machdeps/make_machdep/limits_macros.c as lib/make_machdep/limits_macros.c)
  (machdeps/make_machdep/little_endian.c as lib/make_machdep/little_endian.c)
  (machdeps/make_machdep/make_machdep_common.h as lib/make_machdep/make_machdep_common.h)
  (machdeps/make_machdep/nsig.c as lib/make_machdep/nsig.c)
  (machdeps/make_machdep/posix_version.c as lib/make_machdep/posix_version.c)
  (machdeps/make_machdep/ptrdiff_t.c as lib/make_machdep/ptrdiff_t.c)
  (machdeps/make_machdep/sanity_check.c as lib/make_machdep/sanity_check.c)
  (machdeps/make_machdep/sig_atomic_t.c as lib/make_machdep/sig_atomic_t.c)
  (machdeps/make_machdep/sizeof_double.c as lib/make_machdep/sizeof_double.c)
  (machdeps/make_machdep/sizeof_float.c as lib/make_machdep/sizeof_float.c)
  (machdeps/make_machdep/sizeof_fun.c as lib/make_machdep/sizeof_fun.c)
  (machdeps/make_machdep/sizeof_int.c as lib/make_machdep/sizeof_int.c)
  (machdeps/make_machdep/sizeof_long.c as lib/make_machdep/sizeof_long.c)
  (machdeps/make_machdep/sizeof_longdouble.c as lib/make_machdep/sizeof_longdouble.c)
  (machdeps/make_machdep/sizeof_longlong.c as lib/make_machdep/sizeof_longlong.c)
  (machdeps/make_machdep/sizeof_ptr.c as lib/make_machdep/sizeof_ptr.c)
  (machdeps/make_machdep/sizeof_short.c as lib/make_machdep/sizeof_short.c)
  (machdeps/make_machdep/sizeof_void.c as lib/make_machdep/sizeof_void.c)
  (machdeps/make_machdep/size_t.c as lib/make_machdep/size_t.c)
  (machdeps/make_machdep/ssize_t.c as lib/make_machdep/ssize_t.c)
  (machdeps/make_machdep/stdio_macros.c as lib/make_machdep/stdio_macros.c)
  (machdeps/make_machdep/stdlib_macros.c as lib/make_machdep/stdlib_macros.c)
  (machdeps/make_machdep/time_t.c as lib/make_machdep/time_t.c)
  (machdeps/make_machdep/uint_fast16_t.c as lib/make_machdep/uint_fast16_t.c)
  (machdeps/make_machdep/uint_fast32_t.c as lib/make_machdep/uint_fast32_t.c)
  (machdeps/make_machdep/uint_fast64_t.c as lib/make_machdep/uint_fast64_t.c)
  (machdeps/make_machdep/uint_fast8_t.c as lib/make_machdep/uint_fast8_t.c)
  (machdeps/make_machdep/uintptr_t.c as lib/make_machdep/uintptr_t.c)
  (machdeps/make_machdep/wchar_t.c as lib/make_machdep/wchar_t.c)
  (machdeps/make_machdep/weof.c as lib/make_machdep/weof.c)
  (machdeps/make_machdep/wint_t.c as lib/make_machdep/wint_t.c)
  (machdeps/make_machdep/wordsize.c as lib/make_machdep/wordsize.c)
))
