;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;                                                                        ;;
;;  This file is part of the Frama-C's E-ACSL plug-in.                    ;;
;;                                                                        ;;
;;  Copyright (C) 2012-2024                                               ;;
;;    CEA (Commissariat à l'énergie atomique et aux énergies              ;;
;;         alternatives)                                                  ;;
;;                                                                        ;;
;;  you can redistribute it and/or modify it under the terms of the GNU   ;;
;;  Lesser General Public License as published by the Free Software       ;;
;;  Foundation, version 2.1.                                              ;;
;;                                                                        ;;
;;  It is distributed in the hope that it will be useful,                 ;;
;;  but WITHOUT ANY WARRANTY; without even the implied warranty of        ;;
;;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         ;;
;;  GNU Lesser General Public License for more details.                   ;;
;;                                                                        ;;
;;  See the GNU Lesser General Public License version 2.1                 ;;
;;  for more details (enclosed in the file licenses/LGPLv2.1).            ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

; BUILD LIBDLMALLOC
(data_only_dirs contrib)

(rule
 (deps (source_tree contrib))
 (targets libeacsl-dlmalloc.a)
 (action
 (no-infer
  (progn
   (chdir contrib/libdlmalloc (run make))
   (copy contrib/libdlmalloc/libeacsl-dlmalloc.a libeacsl-dlmalloc.a)))))


; CONTRIB FILE
(install
 (package frama-c-e-acsl)
 (section
  (site
   (frama-c-e-acsl contrib)))
 (files
  (contrib/libdlmalloc/dlmalloc.c as libdlmalloc/dlmalloc.c)))

; LIB DLMALLOC
(install
 (package frama-c-e-acsl)
 (section lib)
 (files
  (libeacsl-dlmalloc.a as libeacsl-dlmalloc.a)))

; SCRIPT
(install
 (package frama-c-e-acsl)
 (section bin)
 (files
  (scripts/e-acsl-gcc.sh as e-acsl-gcc.sh)))

; SHARE
(install
 (package frama-c-e-acsl)
 (section (site (frama-c share)))
 (files
; main header
(share/e-acsl/e_acsl.h as e-acsl/e_acsl.h)
; (numerical_model)
(share/e-acsl/numerical_model/e_acsl_floating_point.h as e-acsl/numerical_model/e_acsl_floating_point.h)
(share/e-acsl/numerical_model/e_acsl_floating_point.c as e-acsl/numerical_model/e_acsl_floating_point.c)
(share/e-acsl/numerical_model/e_acsl_gmp_api.h as e-acsl/numerical_model/e_acsl_gmp_api.h)
; (libc_replacements)
(share/e-acsl/libc_replacements/e_acsl_string.h as e-acsl/libc_replacements/e_acsl_string.h)
(share/e-acsl/libc_replacements/e_acsl_stdio.c as e-acsl/libc_replacements/e_acsl_stdio.c)
(share/e-acsl/libc_replacements/e_acsl_string.c as e-acsl/libc_replacements/e_acsl_string.c)
(share/e-acsl/libc_replacements/e_acsl_stdio.h as e-acsl/libc_replacements/e_acsl_stdio.h)
; (instrumentation_model)
(share/e-acsl/instrumentation_model/e_acsl_temporal.c as e-acsl/instrumentation_model/e_acsl_temporal.c)
(share/e-acsl/instrumentation_model/e_acsl_assert_data.h as e-acsl/instrumentation_model/e_acsl_assert_data.h)
(share/e-acsl/instrumentation_model/e_acsl_contract.h as e-acsl/instrumentation_model/e_acsl_contract.h)
(share/e-acsl/instrumentation_model/e_acsl_temporal.h as e-acsl/instrumentation_model/e_acsl_temporal.h)
(share/e-acsl/instrumentation_model/e_acsl_contract.c as e-acsl/instrumentation_model/e_acsl_contract.c)
(share/e-acsl/instrumentation_model/e_acsl_assert_data_api.c as e-acsl/instrumentation_model/e_acsl_assert_data_api.c)
(share/e-acsl/instrumentation_model/e_acsl_assert.c as e-acsl/instrumentation_model/e_acsl_assert.c)
(share/e-acsl/instrumentation_model/e_acsl_assert.h as e-acsl/instrumentation_model/e_acsl_assert.h)
(share/e-acsl/instrumentation_model/e_acsl_temporal_timestamp.h as e-acsl/instrumentation_model/e_acsl_temporal_timestamp.h)
(share/e-acsl/instrumentation_model/e_acsl_assert_data_api.h as e-acsl/instrumentation_model/e_acsl_assert_data_api.h)
; (observation_model)
(share/e-acsl/observation_model/e_acsl_observation_model.h as e-acsl/observation_model/e_acsl_observation_model.h)
(share/e-acsl/observation_model/e_acsl_heap.h as e-acsl/observation_model/e_acsl_heap.h)
; (observation_model/segment_model)
(share/e-acsl/observation_model/segment_model/e_acsl_segment_timestamp_retrieval.c as e-acsl/observation_model/segment_model/e_acsl_segment_timestamp_retrieval.c)
(share/e-acsl/observation_model/segment_model/e_acsl_shadow_concurrency.h as e-acsl/observation_model/segment_model/e_acsl_shadow_concurrency.h)
(share/e-acsl/observation_model/segment_model/e_acsl_segment_observation_model.c as e-acsl/observation_model/segment_model/e_acsl_segment_observation_model.c)
(share/e-acsl/observation_model/segment_model/e_acsl_shadow_layout.h as e-acsl/observation_model/segment_model/e_acsl_shadow_layout.h)
(share/e-acsl/observation_model/segment_model/e_acsl_shadow_layout.c as e-acsl/observation_model/segment_model/e_acsl_shadow_layout.c)
(share/e-acsl/observation_model/segment_model/e_acsl_segment_tracking.h as e-acsl/observation_model/segment_model/e_acsl_segment_tracking.h)
(share/e-acsl/observation_model/segment_model/e_acsl_segment_tracking.c as e-acsl/observation_model/segment_model/e_acsl_segment_tracking.c)
(share/e-acsl/observation_model/segment_model/e_acsl_shadow_concurrency.c as e-acsl/observation_model/segment_model/e_acsl_shadow_concurrency.c)
(share/e-acsl/observation_model/segment_model/e_acsl_segment_omodel_debug.c as e-acsl/observation_model/segment_model/e_acsl_segment_omodel_debug.c)
(share/e-acsl/observation_model/e_acsl_observation_model.c as e-acsl/observation_model/e_acsl_observation_model.c)
; (observation_model/bittree_model)
(share/e-acsl/observation_model/bittree_model/e_acsl_bittree_omodel_debug.c as e-acsl/observation_model/bittree_model/e_acsl_bittree_omodel_debug.c)
(share/e-acsl/observation_model/bittree_model/e_acsl_bittree.c as e-acsl/observation_model/bittree_model/e_acsl_bittree.c)
(share/e-acsl/observation_model/bittree_model/e_acsl_bittree.h as e-acsl/observation_model/bittree_model/e_acsl_bittree.h)
(share/e-acsl/observation_model/bittree_model/e_acsl_bittree_timestamp_retrieval.c as e-acsl/observation_model/bittree_model/e_acsl_bittree_timestamp_retrieval.c)
(share/e-acsl/observation_model/bittree_model/e_acsl_bittree_observation_model.c as e-acsl/observation_model/bittree_model/e_acsl_bittree_observation_model.c)
; (observation_model/internals)
(share/e-acsl/observation_model/internals/e_acsl_patricia_trie.c as e-acsl/observation_model/internals/e_acsl_patricia_trie.c)
(share/e-acsl/observation_model/internals/e_acsl_safe_locations.h as e-acsl/observation_model/internals/e_acsl_safe_locations.h)
(share/e-acsl/observation_model/internals/e_acsl_safe_locations.c as e-acsl/observation_model/internals/e_acsl_safe_locations.c)
(share/e-acsl/observation_model/internals/e_acsl_patricia_trie.h as e-acsl/observation_model/internals/e_acsl_patricia_trie.h)
(share/e-acsl/observation_model/internals/e_acsl_heap_tracking.h as e-acsl/observation_model/internals/e_acsl_heap_tracking.h)
(share/e-acsl/observation_model/internals/e_acsl_omodel_debug.h as e-acsl/observation_model/internals/e_acsl_omodel_debug.h)
(share/e-acsl/observation_model/internals/e_acsl_timestamp_retrieval.h as e-acsl/observation_model/internals/e_acsl_timestamp_retrieval.h)
(share/e-acsl/observation_model/internals/e_acsl_heap_tracking.c as e-acsl/observation_model/internals/e_acsl_heap_tracking.c)
(share/e-acsl/observation_model/e_acsl_heap.c as e-acsl/observation_model/e_acsl_heap.c)
(share/e-acsl/e_acsl_rtl.c as e-acsl/e_acsl_rtl.c)
; (internals)
(share/e-acsl/internals/e_acsl_concurrency.h as e-acsl/internals/e_acsl_concurrency.h)
(share/e-acsl/internals/e_acsl_debug.c as e-acsl/internals/e_acsl_debug.c)
(share/e-acsl/internals/e_acsl_rtl_error.c as e-acsl/internals/e_acsl_rtl_error.c)
(share/e-acsl/internals/e_acsl_malloc.c as e-acsl/internals/e_acsl_malloc.c)
(share/e-acsl/internals/e_acsl_bits.c as e-acsl/internals/e_acsl_bits.c)
(share/e-acsl/internals/e_acsl_shexec.c as e-acsl/internals/e_acsl_shexec.c)
(share/e-acsl/internals/e_acsl_trace.c as e-acsl/internals/e_acsl_trace.c)
(share/e-acsl/internals/e_acsl_trace.h as e-acsl/internals/e_acsl_trace.h)
(share/e-acsl/internals/e_acsl_debug.h as e-acsl/internals/e_acsl_debug.h)
(share/e-acsl/internals/e_acsl_shexec.h as e-acsl/internals/e_acsl_shexec.h)
(share/e-acsl/internals/e_acsl_rtl_string.c as e-acsl/internals/e_acsl_rtl_string.c)
(share/e-acsl/internals/e_acsl_rtl_io.h as e-acsl/internals/e_acsl_rtl_io.h)
(share/e-acsl/internals/e_acsl_rtl_error.h as e-acsl/internals/e_acsl_rtl_error.h)
(share/e-acsl/internals/e_acsl_alias.h as e-acsl/internals/e_acsl_alias.h)
(share/e-acsl/internals/e_acsl_rtl_string.h as e-acsl/internals/e_acsl_rtl_string.h)
(share/e-acsl/internals/e_acsl_malloc.h as e-acsl/internals/e_acsl_malloc.h)
(share/e-acsl/internals/e_acsl_private_assert.c as e-acsl/internals/e_acsl_private_assert.c)
(share/e-acsl/internals/e_acsl_private_assert.h as e-acsl/internals/e_acsl_private_assert.h)
(share/e-acsl/internals/e_acsl_bits.h as e-acsl/internals/e_acsl_bits.h)
(share/e-acsl/internals/e_acsl_rtl_io.c as e-acsl/internals/e_acsl_rtl_io.c)
(share/e-acsl/internals/e_acsl_config.h as e-acsl/internals/e_acsl_config.h)
))
