(library
	(name SLEEK)
	(public_name frama-c-sleek.core)
	(flags -open Frama_c_kernel :standard)
	(libraries frama-c.kernel hipsleek)
	(modules lexer parser sleek_options sleek_print sleek_run)
)

(plugin
	(optional)
	(name sleek)
	(libraries frama-c-sleek.core)
	(site (frama-c plugins))
)

(rule
 (targets lexer.ml)
 (deps lexer.mll)
 (action (run ocamllex %{deps}))
)